[project]
name = "ztm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "homeassistant>=2023.7.3",
    "ruff>=0.7.1",
    "setuptools>=75.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
    "freezegun>=1.5.1",
    "mypy>=1.13.0",
    "pytest-aioresponses>=0.2.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
]

